# python-starter

./: .gitignore  AGENTS.md  BOOTSTRAP.md  README.md  pyproject.toml
.agents/skills/marimo-notebook/: SKILL.md
.codex/: config.toml
.codex/agents/: docs_researcher.toml  explorer_fast.toml  implementer.toml  reviewer_deep.toml
docs/: deep-modules.md  importlinter.example.ini
notebooks/: scratch.py
scripts/: check_deep_modules.py
src/agent_ready_python_starter/: __init__.py  deep_modules.py
tests/: test_deep_modules.py  test_smoke.py
